--- a/bootstrap/root.yaml
+++ b/bootstrap/root.yaml
@@ -21,7 +21,7 @@ spec:
   project: default
   source:
     path: projects
-    repoURL: https://github.com/polinchw/auto-pilot.git
+    repoURL: git@github.com:jeansampaio/auto-pilot.git
   syncPolicy:
     automated:
       allowEmpty: true
