--- a/bootstrap/argo-cd.yaml
+++ b/bootstrap/argo-cd.yaml
@@ -19,7 +19,7 @@ spec:
   project: default
   source:
     path: bootstrap/argo-cd
-    repoURL: https://github.com/polinchw/auto-pilot.git
+    repoURL: git@github.com:jeansampaio/auto-pilot.git
   syncPolicy:
     automated:
       allowEmpty: true
