--- a/projects/demo.yaml
+++ b/projects/demo.yaml
@@ -37,7 +37,7 @@ spec:
   - git:
       files:
       - path: apps/**/demo/config.json
-      repoURL: https://github.com/polinchw/auto-pilot.git
+      repoURL: git@github.com:jeansampaio/auto-pilot.git
       requeueAfterSeconds: 20
       revision: ""
       template:
@@ -50,7 +50,7 @@ spec:
   - git:
       files:
       - path: apps/**/demo/config_dir.json
-      repoURL: https://github.com/polinchw/auto-pilot.git
+      repoURL: git@github.com:jeansampaio/auto-pilot.git
       requeueAfterSeconds: 20
       revision: ""
       template:
