--- a/projects/go-microservice.yaml
+++ b/projects/go-microservice.yaml
@@ -37,7 +37,7 @@ spec:
   - git:
       files:
       - path: apps/**/go-microservice/config.json
-      repoURL: https://github.com/polinchw/auto-pilot.git
+      repoURL: git@github.com:jeansampaio/auto-pilot.git
       requeueAfterSeconds: 20
       revision: ""
       template:
