--- a/projects/hello.yaml
+++ b/projects/hello.yaml
@@ -37,7 +37,7 @@ spec:
   - git:
       files:
       - path: apps/**/hello/config.json
-      repoURL: https://github.com/polinchw/auto-pilot.git
+      repoURL: git@github.com:jeansampaio/auto-pilot.git
       requeueAfterSeconds: 20
       revision: ""
       template:
@@ -50,7 +50,7 @@ spec:
   - git:
       files:
       - path: apps/**/hello/config_dir.json
-      repoURL: https://github.com/polinchw/auto-pilot.git
+      repoURL: git@github.com:jeansampaio/auto-pilot.git
       requeueAfterSeconds: 20
       revision: ""
       template:
@@ -68,7 +68,7 @@ spec:
         app.kubernetes.io/name: '{{ appName }}'
       annotations:
         argocd-image-updater.argoproj.io/git-branch: master
-        argocd-image-updater.argoproj.io/image-list: myalias=polinchw/hello-github-webhook:~4
+        argocd-image-updater.argoproj.io/image-list: myalias=jeansampaio/hello-github-webhook:~4
         argocd-image-updater.argoproj.io/myalias.update-strategy: semver
         argocd-image-updater.argoproj.io/write-back-method: git:secret:argocd/git-creds
       name: hello-{{ userGivenName }}
