--- a/apps/addons/overlays/cluster-addons/config.json
+++ b/apps/addons/overlays/cluster-addons/config.json
@@ -4,7 +4,7 @@
   "destNamespace": "argocd",
   "destServer": "https://kubernetes.default.svc",
   "srcPath": "apps/addons/overlays/cluster-addons",
-  "srcRepoURL": "https://github.com/polinchw/auto-pilot.git",
+  "srcRepoURL": "git@github.com:jeansampaio/auto-pilot.git",
   "srcTargetRevision": "",
   "labels": null,
   "annotations": null
