--- a/apps/go-microservice/overlays/go-microservice/config.json
+++ b/apps/go-microservice/overlays/go-microservice/config.json
@@ -4,7 +4,7 @@
   "destNamespace": "default",
   "destServer": "https://kubernetes.default.svc",
   "srcPath": "apps/go-microservice/overlays/go-microservice",
-  "srcRepoURL": "https://github.com/polinchw/auto-pilot.git",
+  "srcRepoURL": "git@github.com:jeansampaio/auto-pilot.git",
   "srcTargetRevision": "",
   "labels": null,
   "annotations": null
