--- a/apps/grallvm/overlays/demo/config.json
+++ b/apps/grallvm/overlays/demo/config.json
@@ -4,7 +4,7 @@
   "destNamespace": "grallvm",
   "destServer": "https://kubernetes.default.svc",
   "srcPath": "apps/grallvm/overlays/demo",
-  "srcRepoURL": "https://github.com/polinchw/auto-pilot.git",
+  "srcRepoURL": "git@github.com:jeansampaio/auto-pilot.git",
   "srcTargetRevision": "",
   "labels": null,
   "annotations": null
